--- a/Smart.Service/Smart.Service.csproj
+++ b/Smart.Service/Smart.Service.csproj
@@ -44,6 +44,9 @@
     <Reference Include="log4net">
       <HintPath>C:\com\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
