--- a/Hospital/App.config
+++ b/Hospital/App.config
@@ -17,7 +17,7 @@
 
   <connectionStrings>
     <add name="SmartConnection"
-    connectionString="Provider=Microsoft.ACE.OleDb.12.0;Data Source=E:\Users\Admin\Source\Repos\ab29693295\Hospital\Hospital\bin\Debug\Hospital.mdb"
+    connectionString="Provider=Microsoft.ACE.OleDb.12.0;Data Source=E:\摄像程序\Hospital\Hospital\bin\Debug\Hospital.mdb"
     providerName="JetEntityFrameworkProvider"/>
 
   </connectionStrings>
